--- a/app/views/admin/dashboards/show.html.slim
+++ b/app/views/admin/dashboards/show.html.slim
@@ -1,1 +1,6 @@
-h1.text-3xl Tableau de bord administrateur
+h1 Tableau de bord administrateur
+
+article
+  hgroup
+    h2 Admin::Dashboards#show
+    p Find me in app/views/admin/dashboards/show.html.slim
