--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -1,19 +1,19 @@
-header.flex.items-center.justify-between.mb-6.pb-2.border-b-2.border-primary-color
-  h1.text-lg.font-bold Liste des utilisateurs
+header
+  h2 Liste des utilisateurs
 
   - if allowed_to?(:create?, User)
-    = link_to 'Ajouter +', new_admin_user_path, class: 'add-link'
+    = link_to 'Ajouter +', new_admin_user_path
 
 == pagy_nav(@pagy) if @pagy.pages > 1
 
-#users.relative.overflow-x-auto.shadow-md.sm:rounded-lg
-  table.w-full.text-sm.text-left.rtl:text-right.text-gray-500.dark:text-gray-400
-    thead.text-xs.text-gray-700.uppercase.bg-gray-50.dark:bg-gray-700.dark:text-gray-400
+section#users.overflow-auto
+  table.striped
+    thead
       tr
-        th.px-6.py-3 scope="col" Nom complet
-        th.px-6.py-3 scope="col" Email
-        th.px-6.py-3 scope="col" Rôle
-        th.px-6.py-3 scope="col" Actions
+        th scope="col" Nom complet
+        th scope="col" Email
+        th scope="col" Rôle
+        th scope="col" Actions
 
     tbody
       = render @users
