--- a/app/views/application/_header.html.slim.tt
+++ b/app/views/application/_header.html.slim.tt
@@ -1,54 +1,33 @@
-nav.bg-white.border-b.border-gray-200
-  .max-w-screen-xl.flex.flex-wrap.items-center.justify-between.mx-auto.p-4
-    = link_to root_path, class: 'flex items-center space-x-3 rtl:space-x-reverse' do
-      h1.text-lg.md:text-2xl <%= camelized %>
+nav role="navigation"
+  ul role="list"
+    li
+      = link_to root_path do
+        strong <%= camelized %>
 
-    .flex.items-center.md:order-2.space-x-3.rtl:space-x-reverse
-      <%- if @authentication -%>
+  input type="checkbox" id="menu-burger"
+  label for="menu-burger" style="font-size: calc(var(--pico-font-size) * 1.3);" aria-label="Menu" aria-controls="menu"
+    | &equiv;
 
-      - if authenticated?
-        button.flex.text-sm.bg-gray-800.rounded-full.md:me-0.ring-4.ring-gray-700.focus:ring-secondary-color type="button" id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown" data-dropdown-placement="bottom"
-          span.sr-only Open user menu
-          <%- if options.skip_active_storage? -%>
+  ul id="menu" role="list"
+    - if authenticated?
+      li role="listitem"
+        details.dropdown
+          summary
+            - if current_user.avatar.attached?
+              => image_tag polymorphic_path(current_user.avatar), style: 'width: 30px; height: 30px; border-radius: 50%; border: 2px solid var(--pico-primary);'
+              | Mon compte
+            - else
+              | Mon compte
 
-          p.text-white.p-2 Menu
-          <%- else -%>
-
-          - if current_user.avatar.attached?
-            = image_tag polymorphic_path(current_user.avatar), class: 'w-10 h-10 object-cover rounded-full'
-          - else
-            p.text-white.p-2 Menu
-          <%- end -%>
-
-        / Dropdown menu
-        .z-50.hidden.my-4.text-base.list-none.bg-white.divide-y.divide-gray-100.rounded-lg.shadow id="user-dropdown"
-          .px-4.py-3
-            span.block.text-sm.text-center.text-gray-900= current_user.email_address
-
-          ul.py-2 aria-labelledby="user-menu-button"
+          ul dir="rtl"
             li
-              = link_to 'Mon profil',
-                      edit_me_profile_path,
-                      class: 'block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100'
+              = link_to 'Mon profil', edit_me_profile_path
 
             - if allowed_to?(:show?, with: Admin::DashboardPolicy)
               li
-                = link_to 'Espace administrateur',
-                          admin_dashboard_path,
-                          class: 'block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100'
+                = link_to 'Espace administrateur', admin_dashboard_path
+
             li
               = link_to 'Déconnexion',
                         session_path,
-                        data: { turbo_method: :delete },
-                        class: 'block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100'
-      <%- end -%>
-
-      button.inline-flex.items-center.p-2.w-10.h-10.justify-center.text-sm.text-gray-500.rounded-lg.md:hidden.hover:bg-gray-100.focus:outline-none.focus:ring-2.focus:ring-gray-200 data-collapse-toggle="navbar-main" type="button" aria-controls="navbar-user" aria-expanded="false"
-        span.sr-only Open main menu
-        svg.w-5.h-5 aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14"
-        path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"
-
-    .text-sm.items-center.justify-between.hidden.w-full.md:flex.md:w-auto.md:order-1 id="navbar-main"
-      ul.flex.flex-col.font-medium.p-4.md:p-0.mt-4.border.border-gray-100.rounded-lg.bg-gray-50.md:space-x-8.rtl:space-x-reverse.md:flex-row.md:mt-0.md:border-0.md:bg-white
-        li
-          = link_to 'Accueil', root_path, class: 'block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0'
+                        data: { turbo_method: :delete }
