--- a/app/views/application/_turbo_confirm.html.slim
+++ b/app/views/application/_turbo_confirm.html.slim
@@ -1,20 +1,17 @@
-dialog#turbo-confirm.bg-white.rounded-lg.shadow.fixed.border.border-primary-color
-  form#popup-modal.relative.w-full.max-w-md method="dialog" tabindex="-1"
-    button value="cancel" class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center"
-      <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
-      </svg>
-      span.sr-only Fermer la modale
+dialog#turbo-confirm
+  article
+    form#popup-modal method="dialog" tabindex="-1"
+      header
+        button aria-label="Close" rel="prev"
+        svg width="50" height="50" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20"
+          path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
 
-    .p-6.text-center
-      <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 text-primary-color" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
-      </svg>
+      p Êtes-vous sûr ?
 
-      p.mb-5.text-lg.font-normal.text-gray-500 Êtes-vous sûr ?
+      footer
+        .grid
+          button.secondary value="cancel"
+            | &cross; Annuler
 
-      button value="cancel" class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 mr-2"
-        | Annuler
-
-      button value="confirm" class="text-white bg-primary-color hover:bg-gray-600 focus:ring-4 focus:outline-none focus:ring-primary-color font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center"
-        | Confirmer
+          button value="confirm"
+            | &check; Confirmer
