--- a/app/views/layouts/application.html.slim.tt
+++ b/app/views/layouts/application.html.slim.tt
@@ -11,21 +11,25 @@ html
     = tag.link rel: "manifest", href: pwa_manifest_path(format: :json)
     <%- if options[:css] == 'tailwind' -%>
 
-    = stylesheet_link_tag 'tailwind', 'inter-font', 'data-turbo-track': 'reload'
-    <%- end -%>
+    = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
+    <%- elsif options[:css].blank? -%>
 
+    = stylesheet_link_tag 'https://cdn.jsdelivr.net/npm/@yohns/picocss@2.2.4/css/pico.css'
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
+    <%- end -%>
     = stylesheet_link_tag 'ribbon' if Rails.env.development?
 
     = javascript_importmap_tags
 
   body
     = ribbonit unless Rails.env.production?
-    = render 'header'
 
-    main.md:container.mx-auto.p-5.lg:pb-16
-      #flash= render 'flash'
+    header.container
+      = render 'header'
 
-      = yield
+    main.container
+      .col-12
+        = render 'flash'
+        = yield
 
     = render 'turbo_confirm'
