--- a/app/views/me/profiles/edit.html.slim
+++ b/app/views/me/profiles/edit.html.slim
@@ -1,23 +1,10 @@
-.bg-white.rounded-lg.p-10.w-full.md:w-2/3.lg:w-1/2.xl:w-1/3.border.rounded-lg.mx-auto
-  h2.text-center.text-primary-color.text-xl.font-semibold.mb-5
-    | Mon profil
+article
+  h2 Mon profil
 
-  = simple_form_for current_user, url: [:me, :profile] do |f|
-    .flex.flex-col.lg:flex-row.items-center.gap-3.mb-5
-      = f.input :first_name,
-                label_html: { class: 'form-label' },
-                input_html: { class: 'form-input' },
-                wrapper_html: { class: 'w-full' }
+  section role="form"
+    = simple_form_for current_user, url: [:me, :profile] do |f|
+      = f.input :first_name
+      = f.input :last_name
+      = f.input :email_address
 
-      = f.input :last_name,
-                label_html: { class: 'form-label' },
-                input_html: { class: 'form-input' },
-                wrapper_html: { class: 'w-full' }
-
-    = f.input :email_address,
-              label_html: { class: 'form-label' },
-              input_html: { class: 'form-input' },
-              wrapper_html: { class: 'mb-5' }
-
-    .flex.justify-end
       = f.button :submit, 'Modifier mon profil'
