Split template into dedicated subtemplates
Huge refactoring to better maintainability of templates.
Each sections are in a dedicated folder and have a dedicated commit.

--- a/app/views/application/_header.html.slim.tt
+++ b/app/views/application/_header.html.slim.tt
@@ -9,13 +9,18 @@ nav role="navigation"
     | &equiv;
 
   ul id="menu" role="list"
+    <%- if @authentication -%>
     - if authenticated?
       li role="listitem"
         details.dropdown
           summary
+            <%- if options.skip_active_storage? -%>
+            = t('.my_account')
+            <%- else -%>
             - if current_user.avatar.attached?
               => image_tag polymorphic_path(current_user.avatar), style: 'width: 30px; height: 30px; border-radius: 50%; border: 2px solid var(--pico-primary);'
             = t('.my_account')
+            <%- end -%>
 
           ul dir="rtl"
             li
@@ -29,3 +34,4 @@ nav role="navigation"
               = link_to t('.sign_out'),
                         session_path,
                         data: { turbo_method: :delete }
+    <%- end -%>
