--- a/config/locales/seo.en.yml.tt
+++ b/config/locales/seo.en.yml.tt
@@ -4,7 +4,7 @@ en:
       title: Website page title
       description: Website page description
 
-    homes:
+    welcome:
       show:
         title: Home
     <%- if @authentication -%>
