--- a/config/locales/seo.fr.yml.tt
+++ b/config/locales/seo.fr.yml.tt
@@ -4,7 +4,7 @@ fr:
       title: Titre de la page
       description: Description de la page
 
-    homes:
+    welcome:
       show:
         title: Accueil
     <%- if @authentication -%>
