--- a/sections/authentication/app/views/admin/_sidebar.html.slim.tt
+++ b/sections/authentication/app/views/admin/_sidebar.html.slim.tt
@@ -14,9 +14,13 @@ aside
       li role="listitem"
         details.dropdown
           summary
+            <%- if options.skip_active_storage? -%>
+            = t('.my_account')
+            <%- else -%>
             - if current_user.avatar.attached?
               => image_tag polymorphic_path(current_user.avatar), style: 'width: 30px; height: 30px; border-radius: 50%; border: 2px solid var(--pico-primary);'
             = t('.my_account')
+            <%- end -%>
 
           ul
             li
