--- a/app/views/layouts/application.html.slim.tt
+++ b/app/views/layouts/application.html.slim.tt
@@ -14,10 +14,11 @@ html
     = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
     <%- elsif options[:css].blank? -%>
 
-    = stylesheet_link_tag 'https://cdn.jsdelivr.net/npm/@yohns/picocss@2.2.4/css/pico.css'
+    = stylesheet_link_tag 'https://cdn.jsdelivr.net/npm/@yohns/picocss@2.2.9/css/pico.min.css'
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
+    = stylesheet_link_tag 'flash', 'data-turbo-track': 'reload'
     <%- end -%>
-    = stylesheet_link_tag 'ribbon' if Rails.env.development?
+    = stylesheet_link_tag 'ribbon' unless Rails.env.production?
 
     = javascript_importmap_tags
 
@@ -28,8 +29,9 @@ html
       = render 'header'
 
     main.container
-      .col-12
-        = render 'flash'
-        = yield
+      .row-fluid
+        .col-12.col-lg-6.offset-lg-3
+          #flash= render 'flash'
+          = yield
 
     = render 'turbo_confirm'
