--- a/sections/authentication/app/models/user.rb.tt
+++ b/sections/authentication/app/models/user.rb.tt
@@ -15,6 +15,8 @@ class User < ApplicationRecord
   has_one_attached :avatar
   <%- end %>
 
+  validates :first_name, presence: true
+  validates :last_name, presence: true
   validates :email_address,
             presence: true,
             format: { with: URI::MailTo::EMAIL_REGEXP },
