--- a/sections/authentication/app/views/admin/users/_user.html.slim.tt
+++ b/sections/authentication/app/views/admin/users/_user.html.slim.tt
@@ -1,4 +1,10 @@
 tr
+  <%- unless options.skip_active_storage? -%>
+  td
+    - if user.avatar.attached?
+      = image_tag polymorphic_path(user.avatar), style: 'max-width: 100px; max-height: 100px; border-radius: 50%'
+
+  <%- end -%>
   th scope="row"
     = user.full_name
 
