--- a/config/initializers/mission_control.rb.tt
+++ b/config/initializers/mission_control.rb.tt
@@ -1,5 +1,5 @@
 Rails.application.configure do
-  <%- if @authentication -%>
+  <%- if @authentication && @admin_dashboard -%>
   MissionControl::Jobs.base_controller_class = 'Admin::ApplicationController'
   <%- end -%>
 end
