Add `pretender` gem to sign in as
`pretender` gem is automatically added and configured when the admin
dashboard is requested from the generator.

It allows super_admin and admin to sign as standard role user to manage
their account if needed.

Policies ensure that super_admin can manage all admins or standard roles
whereas admin can only manage standard roles.

--- a/app/views/layouts/application.html.slim.tt
+++ b/app/views/layouts/application.html.slim.tt
@@ -32,6 +32,10 @@ html
       .row-fluid
         .col-12.col-lg-6.offset-lg-3
           #flash= render 'flash'
+          <%- if @admin_dashboard -%>
+          = render 'admin/impersonated' if current_user != true_user
+
+          <%- end -%>
           = yield
 
     = render 'turbo_confirm'
