Add `rspec` gem and specs for related generated code
Add `rspec`, `simplecov` and `rubocop-rspec` gems unless skip test flag
is provided to the generator.

Requests, user model and password mailer are tested in their basic behavior.
Coverage is triggered with the `COVERAGE=true` env var prefixing the rspec
command.

--- a/config/initializers/generators.rb.tt
+++ b/config/initializers/generators.rb.tt
@@ -3,8 +3,10 @@ Rails.application.config.generators do |g|
   g.assets false
   g.helper false
   g.jbuilder false
+  <%- unless options.skip_test? -%>
   g.view_specs false
   g.routing_specs false
-  g.test_framework nil
+  g.test_framework :rspec
+  <%- end -%>
   g.template_engine :slim
 end
